# Trading-Algo

./: .coverage  .gitignore  .secrets.baseline  AGENTS.md  BACKLOG.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: investment-council.md
.claude/skills/spec/: SKILL.md  template.md
.github/: dependabot.yml
.github/workflows/: altdata-monitor.yml  backtest.yml  ci.yml  day-paper.yml  fx-paper.yml  fx-swarm.yml  fx-train.yml  paper-trade.yml
docs/: CRYPTO_HF.md  CTO_ARCHITECTURE_BENCHMARK.md  DATA_FEEDS.md  EFFECTIVE_PUBLIC_STRATEGIES.md  FX_DEEP_RESEARCH.md  HFT_REALITY.md  HOW_IT_WORKS.md
docs/backlog/: crypto-subsystem.md  regime-adaptive-derisk-experiment.md
docs/explainer/: how-it-works.html  index.html
docs/research/: BACKTEST_VALIDATION.md  COMBATING_BACKTEST_BIAS.md  PREDICTIVE_MODEL.md  STRATEGY_COMPOSITION.md  SURVIVORSHIP_FREE_DATA.md
docs/specs/: _example.md
docs/superpowers/plans/: 2026-07-24-fx-swarm.md
docs/superpowers/specs/: 2026-07-24-algo-animation-design.md  2026-07-24-fx-swarm-design.md
obsidian/: How It Works.md  Multi-Region Momentum.md  README.md  Reference.md
obsidian/.obsidian/: app.json
obsidian/Concepts/: 12-1 Momentum.md  No-Lookahead.md  Regime & Trend Filters.md  Volatility Targeting.md
packaging/: README.md  app_main.py  build_mac_app.sh  setup_app.py
product/: ARCHITECTURE_REVIEW.md  PROCESS.md  README.md  __init__.py  roles.md  validate.py
product/backlog/: backlog.json  build_plan.json
product/schema/: backlog_item.schema.json  build_plan.schema.json  rollout.schema.json
scripts/: build_site.sh  build_walkthrough.py
state/: .gitkeep  backtest_equity.json  fx_books.db  fx_state_daytrader.json  fx_state_matt.json  fx_state_multiasset.json  fx_state_partner.json  paper_books.db  paper_state_experimental.json  paper_state_full.json  paper_state_small.json  paper_state_ultra.json
tests/: conftest.py  test_adv_cap.py  test_alloc_rebalance.py  test_attribution.py  test_backtest.py  test_backtest_regression.py  test_bench.py  test_breaker_alert.py  test_cache_key.py  test_calendars.py  test_carry.py  test_consistency.py  test_constituents.py  test_crowding.py  test_crypto_exec.py  test_dashboard.py  test_dashboard_terminal.py  test_dashboard_valuation.py  test_data_fallback.py  test_data_quality.py  test_data_sources.py  test_datasources.py  test_defensive.py  test_delisting.py  test_desktop.py  test_execution_ibkr.py  test_experimental_books.py  test_fees.py  test_foundation_refactor.py  test_fx.py  test_fx_agents.py  test_fx_audit_fixes.py  test_fx_backtest.py  test_fx_book.py  test_fx_champions.py  test_fx_consistency.py  test_fx_crypto_hf.py  test_fx_currency.py  test_fx_dashboard.py  test_fx_dashboard_intraday.py  (+58 more)
tools/: build_obsidian_vault.py  build_vault_notes.py
trading_algo/: __init__.py  _regression_baseline.json  attribution.py  backtest.py  bench.py  calendars.py  carry.py  ci_regression.py  config.py  constituents.py  crowding.py  data.py  data_quality.py  datasources.py  defensive_sweep.py  delisting.py  engine.py  execution_ibkr.py  features.py  fees.py  fx.py  labels.py  lowrisk.py  lsbacktest.py  manifest.py  metrics.py  mlpipeline.py  mlreport.py  multistrat.py  multistrat_report.py  notifications.py  paper_trade.py  pnl.py  portfolio_backtest.py  profiles.py  promotion.py  providers.py  regions.py  report.py  robust.py  (+17 more)
trading_algo/dashboard/: __init__.py  __main__.py  api.py  backtest_store.py  desktop.py  export.py  fx_api.py  meta.py  overview.py  registry.py  server.py
trading_algo/dashboard/static/: app.js  index.html  styles.css
trading_algo/forex/: README.md  __init__.py  agents.py  alpaca_data.py  champions.py  crypto_data.py  crypto_exec.py  dashboard.py  engine.py  ensemble.py  evolve.py  explain.py  features.py  feeds.py  fx_backtest.py  fx_book.py  fx_config.py  fx_data.py  fx_data_quality.py  fx_strategy.py  fxconv.py  genome.py  indicators.py  marks.py  ml_agent.py  ml_backtest.py  news.py  nn.py  oanda_data.py  openbb_data.py  pairs.py  paper.py  research.py  risk.py  run_backtest.py  train.py  validation.py  walkforward.py
