[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-algo"
version = "0.2.0"
description = "Multi-region (FTSE / US / ASX) cross-sectional momentum trading system with AUD portfolio layer"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
ibkr = ["ib_insync>=0.9.86"]
# Free intraday market-data sources (each lazily imported); see docs/DATA_FEEDS.md.
crypto = ["ccxt>=4.0"]            # real-time crypto OHLCV + funding (free, no key)
oanda = ["oandapyV20>=0.7.0"]    # real-time FX via a free practice account
alpaca = ["alpaca-py>=0.20"]     # free real-time US equities (IEX) + paper trading
openbb = ["openbb>=4.0"]         # open-source research aggregator
feeds = ["ccxt>=4.0", "oandapyV20>=0.7.0", "alpaca-py>=0.20"]  # all live data feeds
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]
# Native desktop app (macOS uses the WebKit backend); see packaging/.
desktop = [
    "pywebview>=5.0",
    "pyobjc-framework-WebKit; sys_platform == 'darwin'",
]
mac-build = ["py2app>=0.28; sys_platform == 'darwin'"]

[tool.setuptools.packages.find]
include = ["trading_algo*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Gate on real bug-smells (pyflakes F: unused imports/vars, undefined names) plus
# core pycodestyle E/W. The purely stylistic rules the codebase uses deliberately
# are ignored rather than churned: E731 (factory lambdas), E741 (short math
# names like `l`), E702 (compact one-liners in tests/helpers).
select = ["E", "F", "W"]
# E501 (line length) is not gated — it is the highest-churn / lowest-value rule
# and the codebase's dense-but-readable lines are a deliberate choice.
ignore = ["E731", "E741", "E702", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `trading_algo` imports under the bare
# `pytest` console script (CI), not just `python -m pytest`.
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
