[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-algo"
version = "0.2.0"
description = "Multi-region (FTSE / US / ASX) cross-sectional momentum trading system with AUD portfolio layer"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.5",
    "numpy>=2.4.6",
    "yfinance>=1.5.2",
    "pyarrow>=25.0.0",
]

[project.optional-dependencies]
ibkr = ["ib_insync>=0.9.86"]
# Free intraday market-data sources (each lazily imported); see docs/DATA_FEEDS.md.
crypto = ["ccxt>=4.5.68"]            # real-time crypto OHLCV + funding (free, no key)
oanda = ["oandapyV20>=0.7.2"]    # real-time FX via a free practice account
alpaca = ["alpaca-py>=0.43.5"]     # free real-time US equities (IEX) + paper trading
openbb = ["openbb>=4.7.2"]         # open-source research aggregator
feeds = ["ccxt>=4.5.68", "oandapyV20>=0.7.2", "alpaca-py>=0.43.5"]  # all live data feeds
dev = ["pytest>=9.1.1", "pytest-cov>=7.1.0", "ruff>=0.16.0"]
# Native desktop app (macOS uses the WebKit backend); see packaging/.
desktop = [
    "pywebview>=6.2.1",
    "pyobjc-framework-WebKit; sys_platform == 'darwin'",
]
mac-build = ["py2app>=0.28.10; sys_platform == 'darwin'"]

[tool.setuptools.packages.find]
include = ["trading_algo*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Gate on real bug-smells (pyflakes F: unused imports/vars, undefined names) plus
# core pycodestyle E/W. The purely stylistic rules the codebase uses deliberately
# are ignored rather than churned: E731 (factory lambdas), E741 (short math
# names like `l`), E702 (compact one-liners in tests/helpers).
select = ["E", "F", "W"]
# E501 (line length) is not gated — it is the highest-churn / lowest-value rule
# and the codebase's dense-but-readable lines are a deliberate choice.
ignore = ["E731", "E741", "E702", "E501"]

[tool.mypy]
# Gold-standard type gate. Scoped to the MONEY-PATH modules first ("start
# money-path-only, expand later") — the CI mypy step passes exactly these files
# explicitly, and this `files` list keeps a bare `mypy` invocation in sync.
# Third-party libs without stubs (pandas/numpy/yfinance/ib_insync/ccxt/...) are
# not our correctness surface, so missing imports are ignored globally.
python_version = "3.11"
ignore_missing_imports = true
files = [
    "trading_algo/strategy.py",
    "trading_algo/signals.py",
    "trading_algo/paper_trade.py",
    "trading_algo/backtest.py",
    "trading_algo/metrics.py",
    "trading_algo/forex/risk.py",
    "trading_algo/forex/indicators.py",
    "trading_algo/forex/ensemble.py",
    "trading_algo/forex/fx_book.py",
    "trading_algo/forex/marks.py",
    "trading_algo/execution_ibkr.py",
    "trading_algo/forex/crypto_exec.py",
    "trading_algo/forex/explain.py",
    "trading_algo/fx.py",
]

[tool.coverage.run]
branch = true
source = ["trading_algo"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
# The security gate runs `bandit -r trading_algo -ll` (report only High/Medium
# severity). Test files legitimately use `assert`, so exclude the test tree from
# the recursive scan rather than blanket-skipping B101 across production code.
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `trading_algo` imports under the bare
# `pytest` console script (CI), not just `python -m pytest`.
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.mutmut]
# Money-path modules to mutate. Mutation is a test-of-tests: a surviving
# mutant = a defect the suite cannot see. Run in CI (report-only until a
# green baseline sets the kill-rate threshold — see ci.yml mutation job).
paths_to_mutate = [
    "trading_algo/strategy.py", "trading_algo/signals.py",
    "trading_algo/backtest.py", "trading_algo/metrics.py",
    "trading_algo/paper_trade.py", "trading_algo/forex/risk.py",
    "trading_algo/forex/marks.py", "trading_algo/forex/crypto_exec.py",
    "trading_algo/execution_ibkr.py",
]
